--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,12 @@
   color: red;
   background: pink;
  }
-
+ body{
+  background :url(https://wallpapercave.com/wp/wp4346625.jpg) ;
+  height: 800px;
+  background-size: cover;
+  background-position: center;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
